# LabWork4_PartC

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LR4_Task_4.drawio  LR4_Task_5.drawio  LR4_Task_6.drawio  README.md
Task_4/: CMakeLists.txt  app.c  main.c
Task_5/: CMakeLists.txt  app.c  main.c
Task_6/: CMakeLists.txt  app.c  main.c  matrix.c
include/ctoast/: control.h  input.h  io.h  result.h
include/lr/: task_4.h  task_5.h  task_6.h
lib/ctoast/: CMakeLists.txt  control.c  input.c  io.c
tests/: .clang-format  .clangd  CMakeLists.txt  task_4.cc  task_5.c  task_5.cc  task_6.cc
